[package]
name = "vigor_agent"
version = "0.1.0"
edition = "2021"
description = "Client library for Vigor servers."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
pem-rfc7468 = { version = "0.6.0", features = ["alloc"] }
ed25519-dalek = "1.0.1"
hex = "0.4"
