[package]
name = "vigor_agent"
version = "0.1.4"
edition = "2021"
description = "Client library for Vigor servers."
license = "MIT"
repository = "https://dreamerslegacy.xyz/git/dlxyz/vigor_agent"
documentation = "https://docs.rs/vigor_agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
ureq = { version = "2.4.0", features = ["json", "charset"] }
pem-rfc7468 = { version = "0.6.0", features = ["alloc"] }
ed25519-dalek = "1.0.1"
hex = "0.4"
